--- a/az-pipeline-webapp/az-pipeline-webapp.csproj
+++ b/az-pipeline-webapp/az-pipeline-webapp.csproj
@@ -5,4 +5,11 @@
     <RootNamespace>az_pipeline_webapp</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
